Minor Changes in design adjustments

--- a/views/view.ejs
+++ b/views/view.ejs
@@ -34,12 +34,12 @@
     </section>
 
     <h2 class="text-xl font-bold mb-1">Overview</h2>
-    <section class="chart-container relative w-full bg-white shadow-md rounded px-4 pt-2 pb-4 mb-4" style="height: 50vh;">
+    <section class="chart-container relative w-full bg-white shadow-md rounded px-4 pt-2 pb-4 mb-8" style="height: 50vh;">
       <canvas id="chart"></canvas>
     </section>
 
     <h2 class="text-xl font-bold mb-1">Company Essentials</h2>
-    <section class="Comapany-summary my-8 bg-white shadow-md p-4 rounded">
+    <section class="Comapany-summary mb-4 bg-white shadow-md p-4 rounded">
       <div class="table w-full">
         <div
           class="w-full grid grid-flow-col grid-cols-2 grid-rows-4 md:grid-cols-3 md:grid-rows-3 gap-4 lg:grid-cols-4 lg:grid-rows-2">
