--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -1,5 +1,5 @@
 <div class="flex flex-col w-full py-8 px-4 md:py-16 md:px-8 text-gray-800 md:w-full md:ml-64">
-  <h1 class="text-2xl">Cart</h1>
+  <h1 class="text-2xl lg:text-4xl font-bold">Buy Stock</h1>
   <div>
     <table class="w-full text-sm lg:text-base border-4 " cellspacing="0">
       <thead>
