market section ui improvement

--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -1,5 +1,7 @@
 <main class="relative px-16 py-6 md:col-span-4 bg-gray-300 md:ml-64 md:mx-auto">
 
+    <!-- <div class="absolute-center mx-auto"> -->
+
     <!-- header -->
 
     <header class="mt-4 absolute-center">
@@ -515,4 +517,7 @@
     <div class="mt-12 flex justify-center ">
         <div class="btn bg-secondary-100 text-secondary-200 inline-block hover:shadow-inner transform hover:scale-125 hover:bg-opacity-50 transition ease-out duration-300 ">Load more</div>
     </div>
+
+
+    <!-- </div> -->
 </main>
