--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,4 +1,3 @@
-<h1>Edit Profile</h1>
 <!DOCTYPE html>
 <html>
 
@@ -6,7 +5,7 @@
 
     <h2>HTML Forms</h2>
 
-    <form action="/edit" class="" method="post">
+    <form action="/profile/edit" class="" method="post">
         <label for="fname">First name:</label><br>
         <input type="text" name="fname"><br>
         <!-- <label for="lname">Last name:</label><br>
