--- a/views/done.ejs
+++ b/views/done.ejs
@@ -1,1 +1,169 @@
-<h1>DONE!!!</h1>
+<!--Thankyou PAGE -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tradebyte</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
+    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/style.css" />
+    <!--stylesheet -->
+    <style>
+        /* paragraph in the done page*/
+        
+        p {
+            margin: 10px 0 !important;
+            font-weight: 600;
+            color: black;
+            padding-left: 50px;
+        }
+        /* Heading in the done page*/
+        
+        .heading {
+            font-size: 50px;
+            text-align: center;
+            color: green;
+            padding-left: 50px;
+        }
+        /* The main container or card in the done page*/
+        
+        .done-container {
+            width: 400px;
+            margin-top: 50px;
+            text-align: center;
+            height: 400px;
+            border: black;
+        }
+        /* check icon*/
+        
+        #check {
+            color: rgb(155, 245, 155);
+            padding-left: 50px;
+            padding-bottom: 5px;
+            text-shadow: rgb(101, 245, 101);
+        }
+        /* share button container*/
+        
+        .share>.container {
+            position: absolute;
+            width: 200px;
+            background: white;
+            box-shadow: #ada5a5;
+            margin-top: 12px;
+            margin-bottom: 15px;
+            border-radius: 5px;
+            opacity: 0;
+            visibility: hidden;
+            transition: 3s;
+            transform: translateY(10%);
+        }
+        /*Share button showdatabutton*/
+        
+        .share.showAddThisButtons>.container {
+            opacity: 1;
+            visibility: visible;
+            transform: translateY(0);
+        }
+        
+        .addthis_inline_share_toolbox,
+        .addthis_sharing_toolbox {
+            text-align: center;
+        }
+    </style>
+
+</head>
+
+<body>
+
+    <!---Card component-->
+    <div class="done-container max-w-sm mx-auto flex p-5 bg-white rounded-lg  shadow-2xl">
+        <div class="px-6 py-4">
+            <h1 class="heading font-bold  mb-2 text-center6+">Done</h1>
+            <div>
+                <i id="check" class="far fa-check-circle fa-7x"></i>
+            </div>
+            <div>
+                <p class="text-black-700 text-base text-center">
+                    Thankyou for using TradeByte
+                </p>
+            </div>
+            <div>
+
+                <a class=" bg-gray-700 hover:bg-red-400 text-white font-bold py-2 px-5 rounded-full" href="/market"><i class="far fa-times-circle"></i>  Cancel</a>
+
+
+                <button class="share bg-gray-700 hover:bg-blue-400 text-white font-bold py-2 px-5 mt-5 mb-20 rounded-full cursor-pointer" onclick="share(this)">
+                    <i class="fas fa-share-alt"></i>  Share
+                    <div class="container">
+                    <div class="addthis_inline_share_toolbox"> </div>
+                    <div class="addthis_sharing_toolbox"></div>
+                    </div>
+                    
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <!---------------------java script-------------------------->
+    <script>
+        var AddThisJSLoaded = false; // Addthis not loaded yet
+        var clickedOnShare = false; // share button is not clicked
+        //this is a publicer id
+        var AddthisPubID = "ra-5f3af90d32b2c7af";
+        var AddThisJS = "//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5f3af90d32b2c7af";
+
+        function share(button) {
+            if (!AddThisJSLoaded && !clickedOnShare) { //when AddThis not loaded
+                clickedOnShare = true; // shsre button is clicked
+                showLoading(button);
+                shareByAddThis(button);
+            } else {
+                toogleAddThisButtons(button);
+            }
+        }
+
+
+        function shareByAddThis(button) {
+            var script = document.createElement("script");
+            script.async = true;
+            script.src = AddThisJS;
+
+            script.onload = function() {
+                clickedOnShare = false; // AddTHis js is loaded
+                addthis.user.ready(function(data) {
+                    AddThisJSLoaded = true; //loaded and ready to use
+                    hideLoading(button);
+                    showAddThisButtons(button);
+                })
+            }
+
+            script.onerror = function() {
+                clickedOnShare = false; // Addthis JS  failed to laod
+                hideLoading(button);
+            }
+
+            document.body.appendChild(script);
+        }
+
+        function showLoading(button) {
+            button.classList.add("loading");
+        }
+
+        function hideLoading(button) { //hide the loading 
+            button.classList.remove("loading");
+        }
+
+        function showAddThisButtons(button) {
+            button.classList.add("showAddThisButtons");
+        }
+
+        function toogleAddThisButtons(button) {
+            button.classList.toogle("showAddThisButtons");
+        }
+    </script>
+    <script src="javascript/script.js"></script>
+</body>
+
+</html>
