Pagination Done, market.js fixed, market.ejs fixed, done.ejs fixed done page style temp fixed

--- a/views/layouts/app.ejs
+++ b/views/layouts/app.ejs
@@ -22,6 +22,6 @@
     <div class="md:flex flex-col bg-gray-300 md:flex-row min-h-screen w-full">
       <%- include('../partials/_nav.ejs') %> <%- body %>
     </div>
-    <script src="javascript/script.js"></script>
+    <script type="application/javascript" src="javascript/script.js"></script>
   </body>
 </html>
