--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -5,7 +5,7 @@
 
     <h2>HTML Forms</h2>
 
-    <form action="/profile/edit" class="" method="post">
+    <form action="/" class="" method="post">
         <label for="fname">First name:</label><br>
         <input type="text" name="fname"><br>
         <!-- <label for="lname">Last name:</label><br>
