--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -104,8 +104,13 @@
             </div>
         </form>
             <form action="/profile/edit" class="" method="post">
+                
+                <label for="fname">User name:</label><br>
+                <input type="text" name="userName"><br>
                 <label for="fname">First name:</label><br>
                 <input type="text" name="fname"><br>
+                <label for="fname">Last name:</label><br>
+                <input type="text" name="Lname"><br>
                 <!-- <label for="lname">Last name:</label><br>
         <input type="text" id="lname" name="lname"><br><br> -->
                 <input type="submit" value="Submit">
