--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -89,7 +89,6 @@
                     </div>
                     <hr class="border-gray-200">
 
-                    <a href="edit">Edit</a>
                 </div>
 
             </div>
@@ -98,9 +97,9 @@
                 <p class="float-left text-xs text-gray-500 tracking-tight mt-2">Click on Save to update your Profile
                     Info</p>
 
-                <input type="submit"
+                <!-- <input type="submit"
                     class="bg-indigo-500 text-white text-sm font-medium px-6 py-2 rounded float-right uppercase cursor-pointer"
-                    value="Save">
+                    value="Save"> -->
             </div>
         </form>
             <form action="/profile/edit" class="" method="post">
