--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -1,5 +1,6 @@
-<main class="px-16 py-6 md:col-span-4 bg-gray-300 md:pl-64 md:mx-auto">
+<main class="md:col-span-4 bg-gray-300 md:ml-56 lg:ml-64 md:pr-14 w-full">
 
+    <div class="container px-5 py-10 mx-auto md:px-auto">
 
     <!-- <div class="absolute-center mx-auto"> -->
 
@@ -518,7 +519,7 @@
     <div class="mt-12 flex justify-center ">
         <div class="btn bg-secondary-100 text-secondary-200 inline-block hover:shadow-inner transform hover:scale-125 hover:bg-opacity-50 transition ease-out duration-300 ">Load more</div>
     </div>
-
+</div>
 
     <!-- </div> -->
 </main>
