--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -5,22 +5,22 @@
       <div class="w-full text-sm lg:text-base border-4">
       </div>
       <div
-        class="new grid grid-flow-col grid-cols-3 md:grid-cols-4 grid-rows-2 grig-gap-0 md:gap-4 bg-white shadow-md p-2 lg:p-6 text-center">
-        <div class="text-xs text-left lg:text-lg font-bold uppercase flex items-center lg:items-start">
+        class="new grid grid-flow-col grid-cols-3 md:grid-cols-4 grid-rows-2 grig-gap-0 md:gap-4 lg:grid-rows-3 bg-white shadow-md p-2 lg:p-6 text-center">
+        <div class="text-xs text-left lg:text-lg font-bold uppercase flex items-center lg:justify-center">
           Company Name
         </div>
-        <div class="text-xs lg:text-lg font-bold flex items-center lg:items-start">
-          <div class="flex flex items-center justify-start w-full">
-            <img class="hidden lg:block h-8 mr-2" src="<%= logoSrc %> " alt="<%= companyName %>">
-            <p class="font-medium text-left text-xs md:text-sm lg:text-md w-full md:break-all"
-              name="companySymbol" id="companySymbol"><%= companyName %></p>
+        <div class="text-xs lg:text-lg font-bold flex items-center lg:items-center lg:row-span-2">
+          <div class="flex flex-col items-center justify-center w-full">
+            <img class="hidden lg:block h-16" src="<%= logoSrc %> " alt="<%= companyName %>">
+            <p class="font-medium text-left text-xs md:text-sm lg:text-center lg:text-lg w-full md:break-all"
+              ><%= companyName %></p>
           </div>
         </div>
         <div
           class="hidden md:block text-xs lg:text-lg font-bold uppercase md:flex md:items-center md:justify-center lg:items-start">
           Unit Price
         </div>
-        <div class="hidden md:block md:flex md:justify-center text-xs lg:text-lg font-bold uppercase">
+        <div class="hidden md:block md:flex md:justify-center text-xs lg:text-lg font-bold uppercase lg:row-span-2">
           <input class="text-sm lg:text-center font-medium text-xs lg:text-lg w-full text-center"
             value="<%= latestPrice %>" name="stockPrice" id="stockPrice" readonly />
         </div>
@@ -31,7 +31,7 @@
           class="hidden md:block  text-xs lg:text-lg font-bold uppercase md:flex md:items-center md:justify-center lg:items-start">
           Quantity
         </div>
-        <div class=" text-xs lg:text-lg font-bold uppercase flex items-center justify-center">
+        <div class=" text-xs lg:text-lg font-bold uppercase flex items-center justify-center lg:row-span-2">
           <div class="h-8">
             <div class="relative flex flex-row w-full h-8">
               <input type="number" value="1" min=1 name="noOfStock" id="noOfStock"
@@ -42,7 +42,7 @@
         <div class=" text-xs lg:text-lg text-right font-bold uppercase flex items-center justify-end lg:items-start">
           Total Price
         </div>
-        <div class=" text-xs lg:text-lg font-bold uppercase flex items-center justify-end">
+        <div class=" text-xs lg:text-lg font-bold uppercase flex items-center justify-end lg:row-span-2">
           <p class="text-xs md:text-sm  font-medium text-right text-xs lg:text-lg break-words" id="totalPrice">
             <span class="total-price">
               <%= latestPrice %>
@@ -55,7 +55,8 @@
           class="block uppercase ml-0 md:ml-auto mt-4 shadow  bg-blue-800 hover:bg-indigo-700  focus:shadow-outline focus:outline-none text-white font-semibold text-xs lg:text-sm py-3 px-4 rounded">Back
           to Market</a>
         <button type='submit'
-          class="block uppercase mt-4 ml-4 shadow bg-yellow-500 hover:bg-yellow-600 focus:shadow-outline focus:outline-none text-black font-semibold text-xs lg:text-sm py-3 px-4 rounded"><span class="hidden md:inline-block">Proceed to</span> Checkout</button>
+          class="block uppercase mt-4 ml-4 shadow bg-yellow-500 hover:bg-yellow-600 focus:shadow-outline focus:outline-none text-black font-semibold text-xs lg:text-sm py-3 px-4 rounded"><span
+            class="hidden md:inline-block">Proceed to</span> Checkout</button>
       </div>
     </form>
   </div>
