--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -1,7 +1,8 @@
 <div class="relative md:ml-56 lg:ml-64 py-6 px-3 w-full">
   <div class="mx-auto max-w-6xl flex flex-col w-full px-4 md:py-12 md:px-8 text-gray-800">
     <form action="/cart/buy" method="POST">
-      <h1 class="text-2xl lg:text-4xl font-bold mt-8 mb-4 flex">Buy Stock :<input class="bg-gray-300 max-w-sm w-24 ml-2" type="text" readonly value="<%= symbol %>" id="companySymbol" name="companySymbol" /></h1>
+      <h1 class="text-2xl lg:text-4xl font-bold mt-8 mb-4 flex">Buy Stock :<input class="bg-gray-300 max-w-sm w-24 ml-2"
+          type="text" readonly value="<%= symbol %>" id="companySymbol" name="companySymbol" /></h1>
       <div class="w-full text-sm lg:text-base border-4">
       </div>
       <div
