--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,46 @@
-<h3>**Login/Landing Page**</h3>
-
-<br />
-
-<a href="/auth/google" class="" style="margin-top: 5px;">
-  <i class="fab fa-google"></i> Login With Google
-</a>
+<section class="p-4" style="min-width: 300px;">
+  <h2 class="text-blue-200 text-4xl lg:text-6xl font-semibold">TradeByte</h2>
+  <div class="flex flex-col mb-6 shadow-lg rounded-lg bg-gray-300">
+    <div class="rounded-t mb-0 px-6 py-6">
+      <div class="text-center mb-3">
+        <h6 class="text-gray-600 text-sm font-bold">Sign in with</h6>
+      </div>
+      <div class="btn-wrapper text-center">
+        <a href="/auth/google">
+          <button
+            class="bg-white active:bg-gray-100 text-gray-800 font-normal px-4 py-2 rounded outline-none focus:outline-none mr-1 mb-1 uppercase shadow hover:shadow-md inline-flex items-center font-bold text-xs"
+            type="button" style="transition: all 0.15s ease 0s;"><img alt="..." class="w-5 mr-1"
+              src="/images/google.png">Google</button>
+        </a>
+      </div>
+      <hr class="mt-6 border-b-1 border-gray-400">
+    </div>
+    <div class="flex-auto px-4 lg:px-10 py-10 pt-0">
+      <div class="text-gray-500 text-center mb-3 font-bold"><small>Or sign in with credentials</small></div>
+      <form>
+        <div class="relative w-full mb-3">
+          <label class="block uppercase text-gray-700 text-xs font-bold mb-2" for="grid-password">Email</label>
+          <input type="email"
+            class="px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded text-sm shadow focus:outline-none focus:shadow-outline w-full"
+            placeholder="Email" style="transition: all 0.15s ease 0s;">
+        </div>
+        <div class="relative w-full mb-3">
+          <label class="block uppercase text-gray-700 text-xs font-bold mb-2" for="grid-password">Password</label>
+          <input type="password"
+            class="px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded text-sm shadow focus:outline-none focus:shadow-outline w-full"
+            placeholder="Password" style="transition: all 0.15s ease 0s;">
+        </div>
+        <div class="text-center mt-6">
+          <a href="/user/signin"><button
+              class="bg-gray-900 text-white active:bg-gray-700 text-sm font-bold uppercase px-6 py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1 w-full"
+              type="button" style="transition: all 0.15s ease 0s;">Sign In</button>
+          </a>
+          <a href="/user/signup"><button
+              class="bg-red-900 text-white active:bg-red-700 text-sm font-bold uppercase px-6 py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1 w-full"
+              type="button" style="transition: all 0.15s ease 0s;">Sign Up</button>
+          </a>
+        </div>
+      </form>
+    </div>
+  </div>
+</section>
