--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,6 +10,7 @@
               src="/images/google.png">Sign in with Google</button>
         </a>
       </div>
+      <%- include('./partials/_messages') %> 
       <hr class="mt-6 border-b-1 border-gray-400">
     </div>
     <div class="flex-auto px-4 lg:px-10 pb-10 pt-0">
@@ -17,13 +18,13 @@
       <form action="/user/signin" method="POST">
         <div class="relative w-full mb-3">
           <label class="block uppercase text-gray-700 text-xs font-bold mb-2" for="grid-password">Email</label>
-          <input type="email"
+          <input type="email" name="email"
             class="px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded text-sm shadow focus:outline-none focus:shadow-outline w-full"
             placeholder="Email" style="transition: all 0.15s ease 0s;">
         </div>
         <div class="relative w-full mb-3">
           <label class="block uppercase text-gray-700 text-xs font-bold mb-2" for="grid-password">Password</label>
-          <input type="password"
+          <input type="password" name="password"
             class="px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded text-sm shadow focus:outline-none focus:shadow-outline w-full"
             placeholder="Password" style="transition: all 0.15s ease 0s;">
         </div>
